2006-02-08 Scott Dattalo <scott@dattalo.com>
	* modules/usart.cc:
	Renamed the usart RX and TX pins to RXPIN and TXPIN. The old names
	conflict with the names of constants. (This is a problem with
	absolute mode code.)
	Updated the gui to use gtk_text_view instead of the obsolete
	gtk_text. (note this change really needs to be made for all of
	gpsim's gui!)

2006-02-08 Scott Dattalo <scott@dattalo.com>
	* src/dspic/dspic-instructions.cc, src/dspic/dspic-instructions.h:
	Support for some versions of the MOV instruction.

2006-02-05 Scott Dattalo <scott@dattalo.com>
	* src/dspic/dspic-instructions.cc, src/dspic/dspic-instructions.h,
	src/dspic/dspic-processors.cc, src/dspic/dspic-processors.h,
	src/dspic/dspic-registers.cc, src/dspic/dspic-registers.h:
	Unified the Literal and Register Direct addressing modes.
	Added support for the Status register.
	Program counter tracing is now supported.

2006-02-04 Scott Dattalo <scott@dattalo.com>
	* src/dspic/dspic-instructions.cc, src/dspic/dspic-instructions.h,
	src/dspic/dspic-processors.cc: 
	Added support for the Literal, Register Direct,  and Register
	Indirect addressing modes.

2006-02-03 Roy Rankin <rrankin@ihug.com.au>
	* src/processor.cc, src/pic-processor:
	The pic-processor class was over-writing the
	cycles_per_instruction value in the processor class
	* modules/switch.cc, modules/switch.h, modules/resistor.cc,
	regression/switch_test/switch_test.stc,
	regression/switch_test/switch_test.asm: 
	Switch modules now handle analog inputs and RC loads.
	
2006-01-30 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/processor.h: added methods for mapping
	register addresses into register indexes (for the dspic) and use
	this to create invalid registers.
	* src/registers.cc: contructors now propagate calls to parents
	* gui/gui_regwin.cc: a non-existent register at address 0 was
	crashing the register window
	* src/dspic/dspic-instructions.cc, src/dspic/dspic-instructions.h,