@@ -1,3 +1,12 @@
+2006-02-14 Scott Dattalo <scott@dattalo.com>
+	* src/16bit-instructions.cc, src/16bit-instructions.h,
+	src/16bit-hexdecode.cc: Added support for the extended
+	instructions ADDFSR, ADDULNK, CALLW, MOVSF, MOVSS, SUBFSR, and
+	SUBULNK, in the 18fxxxx family.
+
+2006-02-13 Scott Dattalo <scott@dattalo.com>
+	* src/gui/gui_menu.cc: more source browser experiments.
+
 2006-02-08 Scott Dattalo <scott@dattalo.com>
 	* modules/usart.cc:
 	Renamed the usart RX and TX pins to RXPIN and TXPIN. The old names
